# vkrt

./: .clang-format  .clang-tidy  .gitignore  README.md  bench.txt  compile-shaders.bat  imgui.ini  meson.build  meson_options.txt  todo.txt
assets/: sphere.glb
example/: .gitignore  meson.build
example/src/: main.c
example/subprojects/: vkrt.wrap
shaders/: main.rchit  main.rgen  main.rmiss  meson.build  rchit.spv  rgen.spv  rmiss.spv
shaders/bsdf/: bsdf.glsl  diffuse.glsl  eval.glsl  ggx.glsl  specular.glsl
shaders/core/: mis.glsl  types.glsl
shaders/integrator/: debug.glsl  path.glsl  trace.glsl
shaders/lighting/: direct.glsl
shaders/rt/main/: main.rmiss
shaders/rt/selection/: select.rgen  select.rmiss
shaders/utility/: bindings.glsl  common.glsl  fog.glsl  material.glsl  rand.glsl  timeline.glsl  trace.glsl
src/app/: app.c  app.h  main.c  meson.build
src/app/cli/: cli.c  cli.h
src/app/demo/: demo_actions.c  demo_actions.h  demo_state.c  demo_state.h  gui.c  gui.h  main.c
src/app/editor/: dialogs.c  dialogs_stub.c  editor.c  editor.h  editor_internal.h  theme.c
src/app/editor/inspector/: camera.c  common.c  common.h  config.c  overview.c  panel.c  panel.h  render.c  scene.c  sections.h
src/app/importers/: object.c  object.h
src/app/mesh/: cgltf_impl.c  controller.c  controller.h  loader.c  loader.h
src/app/render/: benchmark.c  benchmark.h  controller.c  controller.h  sequencer.c  sequencer.h
src/app/scene/: controller.c  controller.h  loader.c  mesh_asset_loader.c  mesh_asset_loader.h  scene_controller.c  scene_controller.h
src/app/session/: session.c  session.h
src/app/state/: editor_state.c  editor_state.h  state.c  state.h
src/app/ui/: editor.c  editor.h  editor_theme.c  editor_ui.c  editor_ui.h  theme.c  theme.h
src/core/: meson.build
src/core/api/: config.h  control.c  environment.c  frame.c  geometry.c  internal.h  lifecycle.c  lighting.c  mesh.c  private.h  query.c  rebuild.c  render.c  scene.c  settings.c  shared.c  shared.h  texture.c  vkrt.c  vkrt.h  vkrt_overlay.h  vkrt_types.h
src/core/api/control/: control_internal.h  lighting.c  mesh.c  mutation.c  rebuild.c  render.c  state.c
src/core/internal/: state.c  state.h  vkrt_engine_types.h  vkrt_internal.h
src/core/render/: accel.c  accel.h  descriptor.c  descriptor.h  pipeline.c  pipeline.h  pipeline_common.c  pipeline_compute.c  pipeline_internal.h  pipeline_rt.c  shaders.h  shaders_embedded.h  structure.c  view.c  view.h
src/core/render/accel/: accel.h  blas.c  sbt.c  tlas.c
src/core/runtime/: buffer.c  buffer.h  command.c  command.h  device.c  device.h  functions.c  functions.h  images.c  images.h  instance.c  instance.h  procs.c  procs.h  storage.c  storage.h  surface.c  surface.h  swapchain.c  swapchain.h  sync.c  sync.h  validation.c  validation.h
src/core/runtime/command/: pool.c  pool.h  record.c  record.h
src/core/runtime/image/: storage_image.c
src/core/scene/: camera.c  color.h  environment.c  environment.h  exposure.c  geometry.c  geometry.h  lighting.c  lighting.h  rebuild.c  rebuild.h  rgb2spec.c  scene.c  scene.h  textures.c  textures.h  timing.c  transform.c  uniform.c
src/core/util/: debug.h  io.c
src/core/utility/: debug.c  debug.h  denoise.c  denoise.h  export.c  export.h  exr.cpp  exr.h  image.c  image.h  io.c  io.h  numeric.h  packing.c  packing.h  platform.c  platform.h
src/core/utility/export/: api.c  image.c  internal.h  transfer.c  worker.c
src/shaders/: common.slang  main.rchit  main.rgen  main.rmiss  meson.build
src/shaders/bsdf/: base.slang  bsdf.glsl  bsdf.slang  common.glsl  common.slang  diffuse.glsl  lambertian.slang  model.slang  principled.slang  sample_rgb.slang  sample_spectral.slang  sheen.glsl  specular.glsl  types.glsl  types.slang
src/shaders/bsdf/base/: basis.slang  fresnel.slang  interface.slang  material.slang  math.slang  medium.slang
src/shaders/bsdf/data/: sheen_ltc.slang
src/shaders/bsdf/lobes/: clearcoat.slang  dielectric.slang  diffuse.slang  ggx.slang  lambertian.slang  oren_nayar.slang  sheen.slang  subsurface.slang
src/shaders/bsdf/principled/: attenuation.slang  denoiser.slang  eval_rgb.slang  eval_spectral.slang  sample.slang  types.slang  weights.slang
src/shaders/camera/: ray.slang  viewport.slang
src/shaders/compute/: outline.slang  select.comp  select.slang
src/shaders/core/: constants.slang  math.glsl  resources.slang  tonemap.glsl  types.slang
src/shaders/entry/path/: any_hit.slang  closest_hit.slang  miss.slang  path_closest_hit.slang  path_miss.slang  raygen_rgb.slang  raygen_spectral_hero.slang  raygen_spectral_single.slang  shadow_any_hit.slang  shadow_closest_hit.slang  shadow_miss.slang
src/shaders/entry/post/: outline.slang
src/shaders/entry/select/: closest_hit.slang  miss.slang  raygen.slang  selection_any_hit.slang  selection_closest_hit.slang  selection_miss.slang  selection_raygen.slang
src/shaders/film/: tonemap.slang
src/shaders/geometry/: packing.slang  surface.slang
src/shaders/integrator/: path.glsl  surface.slang  trace.glsl  trace_surface.glsl
src/shaders/light/: direct.slang  environment.slang
src/shaders/lighting/: direct.glsl  direct.slang
src/shaders/material/: textures.slang
src/shaders/path/: any.slang  hit.slang  miss.slang  payload.slang  raygen.slang  raygen_spectral_hero.slang  raygen_spectral_single.slang  shadow_any.slang  shadow_hit.slang  shadow_miss.slang
src/shaders/post/: outline.slang
src/shaders/rt/: alpha_test.slang  layout.slang
src/shaders/sample/: random.slang  sampling.slang  wavelength.slang
src/shaders/sampling/: random.slang  wavelength.slang
src/shaders/scene/: constants.slang  resources.slang
src/shaders/select/: any.slang  hit.slang  miss.slang  payload.slang  raygen.slang
src/shaders/trace/: alpha.slang  layout.slang  scene.slang  select.slang  selection.slang  shadow.slang
src/shaders/utility/: color.slang  debug.slang  fog.glsl  rand.glsl  random.slang  ray.slang  rgb2spec.slang  spectral.slang  timeline.glsl  tonemap.slang  viewport.slang
subprojects/packagefiles/oidn/: meson.build
(+137 files in other folders)
