option(
  'nfd_backend',
  type: 'combo',
  choices: ['auto', 'portal', 'gtk'],
  value: 'auto',
  description: 'Linux NFD backend. Prefers portal and falls back to gtk.',
)

option(
  'file_dialogs',
  type: 'feature',
  value: 'auto',
  description: 'Build native file dialog support when a platform backend is available.',
)

option(
  'selection',
  type: 'boolean',
  value: true,
  description: 'Build selection ray tracing and outline pipelines.',
)

option(
  'profiling',
  type: 'boolean',
  value: false,
  description: 'Enable CPU and GPU debug and profiling information.',
)
