option(
  'linux_window_backend',
  type: 'combo',
  choices: ['auto', 'x11', 'wayland', 'both'],
  value: 'auto',
  description: 'Select the GLFW window backend on Linux. auto enables the available backend(s).',
)

option(
  'nfd_backend',
  type: 'combo',
  choices: ['auto', 'portal', 'gtk'],
  value: 'auto',
  description: 'Linux NFD backend. Prefers portal and falls back to gtk.',
)

option(
  'file_dialogs',
  type: 'feature',
  value: 'auto',
  description: 'Build native file dialog support when a platform backend is available.',
)

option(
  'profiling',
  type: 'boolean',
  value: false,
  description: 'Enable CPU and GPU debug and profiling information.',
)

option(
  'vkrt_version',
  type: 'string',
  value: 'dev',
  description: 'Version string embedded in the binary.',
)
