app_sources = files(
  'main.c',
  'cli/cli.c',
  'session/session.c',
  'mesh/loader.c',
  'mesh/controller.c',
  'render/sequencer.c',
  'editor/theme.c',
  'editor/editor.c',
  'editor/inspector/panel.c',
  'editor/inspector/common.c',
  'editor/inspector/overview.c',
  'editor/inspector/camera.c',
  'editor/inspector/render.c',
  'editor/inspector/scene.c',
)
