vkrt_sources = files(
  'runtime/buffer.c',
  'runtime/command/pool.c',
  'runtime/command/record.c',
  'runtime/images.c',
  'render/descriptor.c',
  'render/view.c',
  'runtime/device.c',
  'runtime/procs.c',
  'runtime/instance.c',
  'render/pipeline.c',
  'scene/camera.c',
  'scene/timing.c',
  'scene/transform.c',
  'scene/uniform.c',
  'render/accel/sbt.c',
  'render/accel/blas.c',
  'render/accel/tlas.c',
  'runtime/surface.c',
  'runtime/sync.c',
  'runtime/swapchain.c',
  'runtime/validation.c',
  'api/lifecycle.c',
  'api/frame.c',
  'api/shared.c',
  'api/mesh.c',
  'api/geometry.c',
  'api/rebuild.c',
  'api/lighting.c',
  'api/settings.c',
  'api/render.c',
  'api/query.c',
  'utility/export.c',
  'utility/io.c',
  'utility/platform.c',
)

spng = static_library('spng',
  sources: files('../../external/spng/spng.c'),
  include_directories: include_directories('../../external/spng', is_system: true),
  c_args: c_warning_suppression_args,
)

vkrt = static_library('vkrt_core',
  c_args: c_args,
  sources: vkrt_sources,
  dependencies: core_dependencies,
  include_directories: [core_build_includes, core_internal_includes],
  link_with: [dcimgui, spng],
  link_language: 'cpp',
)
