vkrt_sources = files(
  'runtime/buffer.c',
  'runtime/command/pool.c',
  'runtime/command/record.c',
  'runtime/images.c',
  'render/descriptor.c',
  'render/view.c',
  'runtime/device.c',
  'runtime/procs.c',
  'runtime/instance.c',
  'render/pipeline.c',
  'scene/camera.c',
  'scene/environment.c',
  'scene/exposure.c',
  'scene/geometry.c',
  'scene/lighting.c',
  'scene/rebuild.c',
  'scene/textures.c',
  'scene/timing.c',
  'scene/transform.c',
  'scene/uniform.c',
  'internal/state.c',
  'render/accel/sbt.c',
  'render/accel/blas.c',
  'render/accel/tlas.c',
  'runtime/surface.c',
  'runtime/sync.c',
  'runtime/swapchain.c',
  'runtime/validation.c',
  'api/lifecycle.c',
  'api/frame.c',
  'api/environment.c',
  'api/mesh.c',
  'api/geometry.c',
  'api/settings.c',
  'api/render.c',
  'api/query.c',
  'api/texture.c',
  'utility/exr.cpp',
  'utility/denoise.c',
  'utility/debug.c',
  'utility/export/api.c',
  'utility/export/image.c',
  'utility/export/transfer.c',
  'utility/export/worker.c',
  'utility/image.c',
  'utility/io.c',
  'utility/platform.c',
)

vkrt = static_library('vkrt_core',
  c_args: c_args,
  cpp_args: core_cpp_args,
  sources: vkrt_sources,
  dependencies: core_dependencies,
  include_directories: [core_build_includes, core_internal_includes],
  link_with: [dcimgui],
  link_language: 'cpp',
)
